--- a/src/common/CMakeLists.txt
+++ b/src/common/CMakeLists.txt
@@ -29,9 +29,10 @@ set(SRCS
             file_util.cpp
             framebuffer_layout.cpp
             hash.cpp
-            logging/filter.cpp
-            logging/text_formatter.cpp
             logging/backend.cpp
+            logging/filter.cpp
+            logging/formatter.cpp
+            logging/text_formatter.cpp
             memory_util.cpp
             microprofile.cpp
             misc.cpp
@@ -58,10 +59,11 @@ set(HEADERS
             framebuffer_layout.h
             hash.h
             linear_disk_cache.h
-            logging/text_formatter.h
-            logging/filter.h
-            logging/log.h
             logging/backend.h
+            logging/filter.h
+            logging/formatter.h
+            logging/log.h
+            logging/text_formatter.h
             math_util.h
             memory_util.h
             microprofile.h
