--- a/src/common/CMakeLists.txt
+++ b/src/common/CMakeLists.txt
@@ -99,7 +99,7 @@ endif()
 create_directory_groups(${SRCS} ${HEADERS})
 
 add_library(common STATIC ${SRCS} ${HEADERS})
-target_link_libraries(common spdlog)
+target_link_libraries(common spdlog fmt)
 if (ARCHITECTURE_x86_64)
     target_link_libraries(common xbyak)
 endif()
